src/inspect/snapshots/_oxitest__inspect__detail__snapshot_tests__detail_fixture.snap
---
source: src/inspect/detail.rs
expression: "render_to_string(&app, 120, 24)"
---
"┌ F db_session ──────────────────────────────┐┌ Detail ────────────────────────────────────────────────────────────────┐"
"│ F  db_session                              ││F db_session                                                            │"
"│                                            ││                                                                        │"
"│ (see detail pane)                          ││  scope: session                                                        │"
"│                                            ││  binding: fixture                                                      │"
"│                                            ││  autouse: no                                                           │"
"│                                            ││  async: no                                                             │"
"│                                            ││  source: tests/conftest.py                                             │"
"│                                            ││  description: Database session fixture                                 │"
"│                                            ││                                                                        │"
"│                                            ││  Consumers                                                             │"
"│                                            ││    T tests/test_db.py::test_create_user                                │"
"│                                            ││                                                                        │"
"│                                            ││  Defined In                                                            │"
"│                                            ││    C tests/conftest.py                                                 │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"└────────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────────┘"
" q Quit  / Search  ? Help  j/k Navigate  l Enter  h Back                                                                "
