src/inspect/snapshots/_oxitest__inspect__detail__snapshot_tests__detail_fixture_broken_edge.snap
---
source: src/inspect/detail.rs
expression: "render_to_string(&app, 120, 24)"
---
" ○ overview › F db_session                                                                                              "
"┌────────────────────────────────────────────────────────────────┐┌ Preview ───────────────────────────────────────────┐"
"│F db_session                                                    ││F db_session                                        │"
"│                                                                ││                                                    │"
"│  scope: session                                                ││  scope: session                                    │"
"│  binding: fixture                                              ││  source: tests/conftest.py                         │"
"│  autouse: no                                                   ││                                                    │"
"│  async: yes                                                    ││                                                    │"
"│  source: tests/conftest.py                                     ││                                                    │"
"│                                                                ││                                                    │"
"│  Depends On                                                    ││                                                    │"
"│    ! missing_dep (fixture, unresolved)                         ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"└────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────┘"
" q Quit  / Search  ? Help  j/k Navigate  l Enter  h Back  H History  s Source  e Edit                                   "
