src/inspect/snapshots/_oxitest__inspect__detail__snapshot_tests__detail_helper.snap
---
source: src/inspect/detail.rs
expression: "render_to_string(&app, 120, 24)"
---
"┌ H make_db ─────────────────────────────────┐┌ Detail ────────────────────────────────────────────────────────────────┐"
"│ H  make_db                                 ││H make_db                                                               │"
"│                                            ││                                                                        │"
"│ (see detail pane)                          ││  signature: make_db(name: str)                                         │"
"│                                            ││  source: tests/conftest.py                                             │"
"│                                            ││  docstring: Create a test database.                                    │"
"│                                            ││                                                                        │"
"│                                            ││  Defined In                                                            │"
"│                                            ││    C tests/conftest.py                                                 │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"└────────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────────┘"
" q Quit  / Search  ? Help  j/k Navigate  l Enter  h Back                                                                "
