src/inspect/snapshots/_oxitest__inspect__detail__snapshot_tests__detail_mark.snap
---
source: src/inspect/detail.rs
expression: "render_to_string(&app, 120, 24)"
---
"┌ M slow ────────────────────────────────────┐┌ Detail ────────────────────────────────────────────────────────────────┐"
"│ M  slow                                    ││M slow                                                                  │"
"│                                            ││                                                                        │"
"│ (see detail pane)                          ││  used_by_count: 2                                                      │"
"│                                            ││                                                                        │"
"│                                            ││  Used By                                                               │"
"│                                            ││    T tests/test_a.py::test_one                                         │"
"│                                            ││    T tests/test_b.py::test_two                                         │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"└────────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────────┘"
" q Quit  / Search  ? Help  j/k Navigate  l Enter  h History                                                             "
