src/inspect/snapshots/_oxitest__inspect__detail__snapshot_tests__detail_plugin.snap
---
source: src/inspect/detail.rs
expression: "render_to_string(&app, 120, 24)"
---
" ○ overview › P capture                                                                                                 "
"┌────────────────────────────────────────────────────────────────┐┌ Preview ───────────────────────────────────────────┐"
"│P capture                                                       ││F std_capture                                       │"
"│                                                                ││                                                    │"
"│  protocols: CollectorProvider, ReporterProvider                ││  scope: function                                   │"
"│                                                                ││  source: <plugin:capture>                          │"
"│  Fixtures                                                      ││                                                    │"
"│    F std_capture                                               ││                                                    │"
"│                                                                ││                                                    │"
"│  Related                                                       ││                                                    │"
"│›   F  std_capture                                              ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"└────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────┘"
" q Quit  / Search  ? Help  j/k Navigate  l Enter  h Back  H History                                                     "
