src/inspect/snapshots/_oxitest__inspect__detail__snapshot_tests__detail_test_parametrized.snap
---
source: src/inspect/detail.rs
expression: "render_to_string(&app, 120, 24)"
---
" ○ overview › T tests/test_math.py::test_add[1+2]                                                                       "
"┌────────────────────────────────────────────────────────────────┐┌ Preview ───────────────────────────────────────────┐"
"│T tests/test_math.py::test_add[1+2]                             ││T tests/test_math.py::test_add[1+2]                 │"
"│                                                                ││                                                    │"
"│  async: no                                                     ││  async: no                                         │"
"│  param_id: 1+2                                                 ││                                                    │"
"│  param_count: 2                                                ││                                                    │"
"│                                                                ││                                                    │"
"│  Variants                                                      ││                                                    │"
"│    T tests/test_math.py::test_add[3+4]                         ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"└────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────┘"
" q Quit  / Search  ? Help  j/k Navigate  l Enter  h Back  H History  s Source  e Edit                                   "
